--- a/comonad-examples.cabal
+++ b/comonad-examples.cabal
@@ -25,15 +25,13 @@ executable comonad-examples
   build-depends:
     , aeson
     , async
-    , base          >=4.13.0.0 && <=4.18.0.0
+    , base        >=4.13.0.0 && <=4.18.0.0
     , bytestring
+    , comonad
     , containers
-    , data-default
     , directory
     , filepath
-    , mtl
-    , optics-core
-    , profunctors
+    , free
     , relude
     , shower
     , text
@@ -94,3 +92,4 @@ executable comonad-examples
   main-is:            Main.hs
   hs-source-dirs:     src
   default-language:   Haskell2010
+  other-modules:      ConwaysGameOfLife
